# crypto-mvp

./: .env  .env.example  .gitignore  ARCHITECTURE.md  BACKTEST_DN_RESULTS.md  INSTALL.md  README.md  RISK_POLICY.md  ROADMAP.md  alembic.ini  backtest_dn_etf_base.csv  backtest_dn_etf_base_corrected.csv  backtest_dn_etf_conservative.csv  backtest_dn_etf_corrected.csv  backtest_dn_ranging.csv  backtest_dn_ranging_corrected.csv  backtest_results_dn.csv  backtest_run1.csv  backtest_run2.csv  backtest_run3.csv  backtest_run4.csv  backtest_run5.csv  backtest_run6.csv  docker-compose.yml  launch.py  pyproject.toml  rebuild_dashboard.ps1  run_backtests.ps1  run_backtests.py  settings.json  setup.ps1  start-crypto-mvp.bat  start.ps1  stop-crypto-mvp.bat
backtest_results/: bear_bo120_tp10.csv  bear_bo120_tp20.csv  bear_bo120_tp5.csv  bear_bo180_tp10.csv  bear_bo180_tp20.csv  bear_bo80_tp5.csv  bull_bo120_tp10.csv  bull_bo120_tp20.csv  bull_bo120_tp5.csv  bull_bo180_tp10.csv  bull_bo180_tp20.csv  bull_bo80_tp5.csv  covid_bo120_tp10.csv  covid_bo120_tp20.csv  covid_bo120_tp5.csv  covid_bo180_tp10.csv  covid_bo180_tp20.csv  covid_bo80_tp5.csv  etf_bo120_tp10.csv  etf_bo120_tp20.csv  etf_bo120_tp5.csv  etf_bo180_tp10.csv  etf_bo180_tp20.csv  etf_bo80_tp5.csv  now_bo120_tp10.csv  now_bo120_tp20.csv  now_bo120_tp5.csv  now_bo180_tp10.csv  now_bo180_tp20.csv  now_bo80_tp5.csv  range_bo120_tp10.csv  range_bo120_tp20.csv  range_bo120_tp5.csv  range_bo180_tp10.csv  range_bo180_tp20.csv  range_bo80_tp5.csv  summary.csv
crypto_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: twap_lookback_override.json
docs/: BACKTEST_RESULTS_DN.md  RUNBOOK.md  (+10 more)
(+203 files in other folders)
