[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-mvp"
version = "0.1.0"
description = "Modular crypto automation platform MVP"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Paul" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.1,<4.0",
  "structlog>=24.1,<25.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.31,<3.0",
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "mypy>=1.10,<2.0",
  "ruff>=0.5,<1.0",
  "types-python-dateutil",
]
test = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
  "migrations/",
]

[tool.coverage.run]
source = ["apps", "core"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
